# kwin-x11-improved

./: .kde-ci.yml  CMakeLists.txt  CONTRIBUTING.md  KWinX11DBusInterfaceConfig.cmake.in  README.md
autotests/: CMakeLists.txt  test_box.cpp  test_boxf.cpp  test_colorspaces.cpp
autotests/drm/: CMakeLists.txt
autotests/integration/: CMakeLists.txt  buttonrebind_test.cpp  inputmethod_test.cpp  internal_window.cpp  keyboard_input_test.cpp  kwin_wayland_test.cpp  kwin_wayland_test.h  layershellv1window_test.cpp  maximize_test.cpp  move_resize_window_test.cpp  outputchanges_test.cpp  placement_test.cpp  plasmawindow_test.cpp  quick_tiling_test.cpp  shade_test.cpp  showing_desktop_test.cpp  sticky_keys_test.cpp  struts_test.cpp  test_helpers.cpp  x11_window_test.cpp  xdgshellwindow_rules_test.cpp  xdgshellwindow_test.cpp  xwayland_input_test.cpp
autotests/libinput/: mock_libinput.cpp
data/: CMakeLists.txt  org_kde_kwin.categories
data/icons/: CMakeLists.txt
doc/: CMakeLists.txt
doc/desktop-x11/: CMakeLists.txt  index.docbook
doc/kwindecoration-x11/: CMakeLists.txt  index.docbook
doc/kwineffects-x11/: CMakeLists.txt  index.docbook
doc/kwinscreenedges-x11/: CMakeLists.txt  index.docbook
doc/kwintabbox-x11/: CMakeLists.txt  index.docbook
doc/kwintouchscreen-x11/: CMakeLists.txt  index.docbook
doc/kwinvirtualkeyboard-x11/: CMakeLists.txt  index.docbook
doc/windowbehaviour-x11/: CMakeLists.txt  index.docbook
doc/windowspecific-x11/: CMakeLists.txt  index.docbook
kconf_update/: CMakeLists.txt  kwin-x11.upd
po/af/: kcm_kwindecoration_x11.po  kcm_kwinrules_x11.po  kcmkwm_x11.po  kwin_x11.po
po/ar/: kcm_animations_x11.po  kcm_kwin_effects_x11.po  kcm_kwin_scripts_x11.po  kcm_kwin_virtualdesktops_x11.po  kcm_kwindecoration_x11.po  kcm_kwinrules_x11.po  kcm_kwintabbox_x11.po  kcmkwincommon_x11.po  kcmkwincompositing_x11.po  kcmkwinscreenedges_x11.po  kcmkwm_x11.po  kwin_x11.po
po/as/: kwin_x11.po
po/ast/: kcm_kwin_effects_x11.po  kcm_kwin_scripts_x11.po  kcm_kwin_virtualdesktops_x11.po  kcm_kwindecoration_x11.po  kcm_kwinrules_x11.po  kcm_kwintabbox_x11.po  kcmkwincommon_x11.po  kcmkwincompositing_x11.po  kcmkwinscreenedges_x11.po  kcmkwm_x11.po  kwin_x11.po
po/az/: kcm_kwin_effects_x11.po  kcm_kwin_scripts_x11.po  kcm_kwin_virtualdesktops_x11.po  kcm_kwindecoration_x11.po  kcm_kwinrules_x11.po  kcm_kwintabbox_x11.po  kcmkwincommon_x11.po  kcmkwincompositing_x11.po  kcmkwinscreenedges_x11.po  kcmkwm_x11.po  kwin_x11.po
po/be/: kcm_kwin_effects_x11.po  kcm_kwin_scripts_x11.po  kcm_kwin_virtualdesktops_x11.po  kcm_kwindecoration_x11.po  kcm_kwinrules_x11.po  kcm_kwintabbox_x11.po  kcmkwincommon_x11.po  kcmkwincompositing_x11.po  kcmkwinscreenedges_x11.po  kcmkwm_x11.po  kwin_x11.po
po/be@latin/: kwin_x11.po
po/bg/: kcm_animations_x11.po  kcm_kwin_effects_x11.po  kcm_kwin_scripts_x11.po  kcm_kwin_virtualdesktops_x11.po  kcm_kwindecoration_x11.po  kcm_kwinrules_x11.po  kcm_kwintabbox_x11.po  kcmkwincommon_x11.po  kcmkwincompositing_x11.po  kcmkwinscreenedges_x11.po  kcmkwm_x11.po  kwin_x11.po
po/bn/: kcmkwm_x11.po  kwin_x11.po
po/bn_IN/: kcm_kwin_virtualdesktops_x11.po  kcm_kwindecoration_x11.po  kcm_kwinrules_x11.po  kcmkwm_x11.po  kwin_x11.po
po/br/: kcm_kwindecoration_x11.po  kcm_kwinrules_x11.po  kcmkwm_x11.po  kwin_x11.po
po/bs/: kcm_kwin_scripts_x11.po  kcm_kwin_virtualdesktops_x11.po  kcm_kwindecoration_x11.po  kcm_kwinrules_x11.po  kcm_kwintabbox_x11.po  kcmkwincompositing_x11.po  kcmkwinscreenedges_x11.po  kcmkwm_x11.po  kwin_x11.po
po/ca/: kcm_animations_x11.po  kcm_kwin_effects_x11.po  kcm_kwin_scripts_x11.po  kcm_kwin_virtualdesktops_x11.po  kcm_kwindecoration_x11.po  kcm_kwinrules_x11.po  kcm_kwintabbox_x11.po  kcmkwincommon_x11.po  kcmkwincompositing.po  kcmkwincompositing_x11.po  kcmkwinscreenedges_x11.po  kcmkwm_x11.po  kwin_x11.po
po/ca@valencia/: kcm_animations_x11.po  kcm_kwin_effects_x11.po  kcm_kwin_scripts_x11.po  kcm_kwin_virtualdesktops_x11.po  kcm_kwindecoration_x11.po  kcm_kwinrules_x11.po  kcm_kwintabbox_x11.po  kcmkwincommon_x11.po  kcmkwincompositing_x11.po  kcmkwinscreenedges_x11.po  kcmkwm_x11.po  kwin_x11.po
po/cs/: kcm_kwin_effects_x11.po  kcm_kwin_scripts_x11.po  kcm_kwin_virtualdesktops_x11.po  kcm_kwindecoration_x11.po  kcm_kwinrules_x11.po  kcm_kwintabbox_x11.po  kcmkwincommon_x11.po  kcmkwincompositing_x11.po  kcmkwinscreenedges_x11.po  kcmkwm_x11.po  kwin_x11.po
po/csb/: kcm_kwin_virtualdesktops_x11.po  kwin_x11.po
po/cy/: kcm_kwindecoration_x11.po  kcm_kwinrules_x11.po  kcmkwm_x11.po  kwin_x11.po
po/da/: kcm_kwin_effects_x11.po  kcm_kwin_scripts_x11.po  kcm_kwin_virtualdesktops_x11.po  kcm_kwindecoration_x11.po  kcm_kwinrules_x11.po  kcm_kwintabbox_x11.po  kcmkwincommon_x11.po  kcmkwincompositing_x11.po  kcmkwm_x11.po  (+2 more)
src/: CMakeLists.txt  KWinX11Config.cmake.in  Messages.sh  compositor.cpp  compositor_wayland.cpp  compositor_x11.cpp  config-kwin.h.cmake  debug_console.cpp  debug_console.ui  events.cpp  globalshortcuts.cpp  globalshortcuts.h  input.cpp  input.h  input_event.h  input_event_spy.cpp  input_event_spy.h  inputmethod.cpp  inputpanelv1window.cpp  inputpanelv1window.h  internalwindow.cpp  internalwindow.h  killprompt.cpp  kwin-x11.notifyrc  kwin.kcfg  kwin.notifyrc  layers.cpp  layershellv1integration.cpp  layershellv1window.cpp  layershellv1window.h  main_wayland.cpp  options.cpp  options.h  outputconfigurationstore.cpp  outputconfigurationstore.h  placement.cpp  placement.h  pointer_input.cpp  pointer_input.h  rules.cpp  (+25 more)
src/kcms/animations/: CMakeLists.txt  Messages.sh  effectssubsetmodel.cpp  effectssubsetmodel.h  kcm.cpp  kcm_animations.json  kcm_animations_x11.json
src/kcms/animations/ui/: main.qml
src/kcms/screenedges/: CMakeLists.txt  Messages.sh  kcm_kwinscreenedges.json  kcm_kwinscreenedges_x11.json  kcm_kwintouchscreen.json  kcm_kwintouchscreen_x11.json  main.cpp  touch.cpp
src/kcms/scripts/: CMakeLists.txt  Messages.sh  kcm_kwin_scripts.json  kcm_kwin_scripts_x11.json  kwinscripts.knsrc  module.cpp
src/kcms/scripts/ui/: main.qml
tests/: CMakeLists.txt  xdgpipv1.cpp
(+1040 files in other folders)
